ajout du contraste footer contact et correction icon des footer

--- a/style.css
+++ b/style.css
@@ -741,6 +741,7 @@ p {
 }
 
 .cta-hero-bt {
+    font-family: "helvetica";
     margin-top: 22px;
     text-transform: uppercase;
     padding: 12px 28px 12px 28px;
